infra/kube/apps/phd_ide/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frps
  namespace: phd
spec:
  selector:
    app: frps
  ports:
  - name: tunnel
    port: 7000
    targetPort: 7000
  - name: ide
    port: 8080
    targetPort: 8080
  type: ClusterIP
