infra/kube/apps/phd_ide/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frps-ide
  namespace: phd
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "phd.hatarakiassistant.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frps
      port: 8080
